--- a/wp-content/themes/takeaway/assets/css/style.css
+++ b/wp-content/themes/takeaway/assets/css/style.css
@@ -3173,6 +3173,10 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     text-transform: capitalize;
 }
 
+#main-wrapper .all-menu-details .single-menu .details h6:before {
+    content: '';
+}
+
 #main-wrapper .all-menu-details .single-menu .details p{ line-height: 20px; }
 
 #main-wrapper .all-menu-details .single-menu .details h6:hover a { color: #e84a5f; }
@@ -3196,7 +3200,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     left: 0;
     margin: 0;
     padding: 20px 0;
-    width: 50%;
+    width: 40%;
     height: 70px;
     font-weight: bold;
 }
@@ -3250,7 +3254,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
 
 
 #main-wrapper .all-menu-details .single-menu .qty-cart input {
-    margin-left: 0 !important;
+    margin-left: 20px !important;
 }
 
 
@@ -3281,15 +3285,19 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     position: relative;
     background: transparent;
     border-radius: 7px;
-    height: 30px;
-    width: 60px;
+    height: 45px;
+    width: auto;
     color: #e84a5f;
     outline: none;
     border: 1px solid #e84a5f;
-    margin: 10px 10px;
+    margin: 2px 10px 0px;
     padding: 10px;
 }
 
+.single_add_to_cart_button i {
+    font-size: 20px;
+    margin-right: 5px;
+}
 
 #main-wrapper .all-menu-details .single-menu .qty-cart.simple-product {
     display: block !important;
@@ -3297,7 +3305,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     bottom: 0px;
     right: 0%;
     padding-top: 10px;
-    width: 50%;
+    width: 60%;
     height: 70px;
     text-align: center;
     border-right: 0;
@@ -5675,7 +5683,7 @@ h5 a:hover { color: #666; }
 }
 
 .woocommerce-page .quantity input.qty {
-    width: 70px !important;
+    width: 85px !important;
     height: 45px;
     border: 2px solid rgba(0, 0, 0, 0.15);
 }
@@ -5702,7 +5710,7 @@ h5 a:hover { color: #666; }
     border: 1px solid #e84a5f !important;;
     background: transparent !important;;
     color: #e84a5f !important;;
-    border-radius: 7px !important;;
+    border-radius: 0px !important;;
     font-size: 16px !important;;
     /*background: #2baddf !important;*/
     border-color: transparent;
@@ -7756,6 +7764,14 @@ ins {
     right: 25px;
     top: 20px;
     width: 24px;
+}
+
+.a-single-tag {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    width: 24px !important;
+    height: 24px !important;
 }
 
 .footer-copyright > .container > p > span {
